generate screen with create flow and ckeditor done

--- a/generator/services/angular-template-manager/template/css/gjs-base.css
+++ b/generator/services/angular-template-manager/template/css/gjs-base.css
@@ -190,7 +190,8 @@ u {
 
 .label {
   display: inline-block;
-  padding: 5px 0
+  padding: 5px 0;
+  color: black !important;
 }
 
 .label-checkbox {
