--- a/application/clients/desktop/src/app/user/profilesettings/profilesettings.component.scss
+++ b/application/clients/desktop/src/app/user/profilesettings/profilesettings.component.scss
@@ -1,10 +1,11 @@
 .profileform{
     padding-top: 5%
 }
-.button{
+button{
     float: right;
-    float: right; 
+    margin-right: 20px;    
 }
 .label{
     font-weight: normal;
+    color: black !important;
 }
