grid generation issues fixed

--- a/application/clients/desktop/src/app/screen-designer/desktop-screen/desktop-screen.component.html
+++ b/application/clients/desktop/src/app/screen-designer/desktop-screen/desktop-screen.component.html
@@ -183,8 +183,8 @@
             <b>Type</b>
           </div>
           <div class="row">
-              <label class="radio-inline"><input type="radio" value="none" [(ngModel)]="routeDetails.type" name="routeOption">None</label>
-              <label class="radio-inline"><input type="radio" value="pathVariable" [(ngModel)]="routeDetails.type" name="routeOption">Path Variable</label>
+              <label class="radio-inline"><input type="radio" value="none" [(ngModel)]="routeDetails.type" name="routeOption" disabled>None</label>
+              <!-- <label class="radio-inline"><input type="radio" value="pathVariable" [(ngModel)]="routeDetails.type" name="routeOption">Path Variable</label> -->
               <label class="radio-inline"><input type="radio" value="queryParameter" [(ngModel)]="routeDetails.type" name="routeOption">Query Parameter</label>
             </div>
         </form>
